# zaken-backend

./: .editorconfig  .env  .env.local.dist  .env.local.example  .flake8  .gitignore  .local.env.example  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  camunda.env  cleanup.sh  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.tests.yml  docker-compose.yml  install.sh  test.sql
app/: .bpmnlintrc  Dockerfile  ExampleSaveRestore.js  app.py  aza_wonen_global_afronden_zaak.bpmn  aza_wonen_global_decision.bpmn  aza_wonen_global_summon.bpmn  aza_wonen_global_visit.bpmn  aza_wonen_local_vakantieverhuur_regie.bpmn  celery.sh  common_workflow.bpmn  local.py  manage.py  pyproject.toml  requirements.txt  restore_db.sh  top_workflow.bpmn  uwsgi.ini  wait-for.sh  zaak_wonen_subprocesses.bpmn  zgw_consumers.json
app/api/: mocking_views.py  serializers.py  views.py
app/apps/: workflow - Snelkoppeling.lnk
app/certificates/: QuoVadis_Global_SSL_ICA_G2.crt
app/config/: azure_settings.py  celery.py  logging.py  settings.py  urls.py  wsgi.py
app/deploy/: config.ini  docker-entrypoint.celery.sh  docker-entrypoint.development.sh  docker-entrypoint.sh  nginx.conf
app/development/: pre-commit.sh
app/services/: README.md  connection.py  service.py  service_case_objects.py  service_case_types.py  service_cases.py  service_catalogs.py  service_objects.py  service_state_types.py  service_states.py  settings.py  wrapper.py
app/utils/: anonymizer.py  api_key_auth.py  api_queries_bag.py  api_queries_belastingen.py  api_queries_benk_brp.py  api_queries_brp.py  api_queries_decos_join.py  api_queries_toeristische_verhuur.py  api_queries_vakantieverhuur_registraties.py  class_mixins.py  coordinates.py  exceptions.py  managers.py  mimetypes.py  mock_tverhuur.py  openzaak_enabled.py  serializers.py  signals.py  unittest_helpers.py
app/wrappers/: case.py  case_object.py  case_type.py  catalog.py  state.py  state_type.py  wrapper.py
e2e-tests/: README.md  fix_models.sh  pyproject.toml  requirements.txt  setup_or_reset_and_start.sh  terugkoppelen melder  unittest.cfg
e2e-tests/api/: case.py  client.py  config.py  events.py  mock.py  tasks.py  test.py  timers.py  user_tasks.py  util.py  validators.py
e2e-tests/flows/: test_aanschrijving.py  test_change_due_date.py  test_congregate_gateway.py  test_duplicate_task.py  test_invalid_civilian_objection.py  test_no_violation.py  (+7 more)
(+1038 files in other folders)
